# rag-using-faiss

./: .gitignore  README.md  chatbot.py  ingest.py  main.py  pyproject.toml  qa_assistant.py  qa_assistant_memory.py  rag_core.py  rag_txt_app.py  rag_ui_app.py  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
chroma_db/: chroma.sqlite3  manifest.json
faiss_index/: index.faiss  index.pkl  manifest.json
information_storage/: ICE_Interview_PrepGuide_SumitDebnath.docx  qa_notes.txt
