[project]
name = "lang-chain-practices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.0",
    "faiss-cpu>=1.9.0",
    "pypdf>=5.0.0",
]
